--- a/Source/Eml.Tests/examples/zimablue-2.html
+++ b/Source/Eml.Tests/examples/zimablue-2.html
@@ -86,7 +86,7 @@ style="
    top: 27px;
    position: absolute;
 background-size: cover;
-   background-image: url('https://dontflymoney.com/Assets/images/miscs/101-arm-0.png')
+   background-image: url('https://heylisten.com/Assets/images/miscs/101-arm-0.png')
   "></div>
  <div style="
    width: 27px;
