eml: pre tag for plain text

--- a/Source/Eml.Tests/examples/ray-ban-sunglasses-2.html
+++ b/Source/Eml.Tests/examples/ray-ban-sunglasses-2.html
@@ -1,11 +1,11 @@
--- PLAIN
-View online version
+-- PLAIN<br />
+<pre>View online version
 Free Shipping on Order 50+
 Click here to unsubscribe
 Ray Ban, Customer Support, Attn: E-mail Database, 
-909 Calle La Primavera, Glendale, CA 91208
-
--- HTML
+909 Calle La Primavera, Glendale, CA 91208</pre><br />
+<br />
+-- HTML<br />
 <!DOCTYPE HTML>
 <HTML xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office" 
 xmlns:v="urn:schemas-microsoft-com:vml"><HEAD><!--[if gte mso 9]><xml><o:OfficeDocumentSettings><o:AllowPNG/><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]--> 
