--- a/Source/Eml.Tests/examples/gmail-test.html
+++ b/Source/Eml.Tests/examples/gmail-test.html
@@ -1,9 +1,9 @@
--- PLAIN
-*Lucas Carol SD*
+-- PLAIN<br />
+<pre>*Lucas Carol SD*
 Github <http://heylisten.com/> - MEAK <http://heylisten.com/> - Don't fly
-Money <http://heylisten.com/>
-
--- HTML
+Money <http://heylisten.com/></pre><br />
+<br />
+-- HTML<br />
 <div dir="ltr"><br clear="all"><div><div dir="ltr" class="gmail_signature" data-smartmail="gmail_signature"><div dir="ltr"><div style="margin-top:27px">
 		<img src="https://drive.google.com/uc?id=1beb7xuGNOFmYRG0_Fe7EZ7uVYDS09oiE&amp;export=download" style="float:left;margin-right:10px;height:40px"> <b>Lucas Carol SD</b><br>
 		<a href="http://heylisten.com/" target="_blank">Github</a> -
