--- a/Source/Eml.Tests/examples/revolve-sunglasses.html
+++ b/Source/Eml.Tests/examples/revolve-sunglasses.html
@@ -1,11 +1,11 @@
--- PLAIN
-To view the newsletter on your browser please click here
+-- PLAIN<br />
+<pre>To view the newsletter on your browser please click here
 We offer free standard ground shipping valid on orders of $50.00 or more (after all discounts and promotions are applied) on our website.
 If you are unable to see the message below, click here!
 Ray Ban, Customer Support, Attn: E-mail Database, 
-964 Spencer Ave, San Jose, CA 95125
-
--- HTML
+964 Spencer Ave, San Jose, CA 95125</pre><br />
+<br />
+-- HTML<br />
 <!DOCTYPE HTML>
 <HTML xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office" 
 xmlns:v="urn:schemas-microsoft-com:vml"><HEAD><!--[if gte mso 9]><xml><o:OfficeDocumentSettings><o:AllowPNG/><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]--> 
