--- a/Source/Eml.Tests/examples/ray-ban-sunglasses-3.html
+++ b/Source/Eml.Tests/examples/ray-ban-sunglasses-3.html
@@ -1,4 +1,4 @@
--- PLAIN<br />
+<div style='text-align: center; font-family: courier new; padding: 3px; background: #000; border-top: 6px double #C00; border-bottom: 6px double #80C; color: #CCC; font-weight: bold;'>PLAIN</div>
 <pre>Please click here if the email below is not displayed correctly
 We offer free standard ground shipping valid on orders of $50.00 or more (after all discounts 
 and promotions are applied) on our website.
@@ -6,7 +6,7 @@ Click here to unsubscribe
 Ray Ban, Customer Support, Attn: E-mail Database, 
 3036 Kingsley St, San Diego, CA 92106</pre><br />
 <br />
--- HTML<br />
+<div style='text-align: center; font-family: courier new; padding: 3px; background: #000; border-top: 6px double #C00; border-bottom: 6px double #80C; color: #CCC; font-weight: bold;'>HTML</div>
 <!DOCTYPE HTML>
 <HTML xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office" 
 xmlns:v="urn:schemas-microsoft-com:vml"><HEAD><!--[if gte mso 9]><xml><o:OfficeDocumentSettings><o:AllowPNG/><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]--> 
